<resources>
    <string name="app_name">BarcodeScanningApp1</string>
    <string name="scan">Scan</string>
    <string name="scan_instruction">Click the scan button to get the information of the barcode.</string>
    <string name="item_list_btn">All items</string>

    <!--For setProductActivity-->
    <string name="set_product_instruction">Set the following information for this product.</string>
    <string name="product_desc">Product descriptions are as follow</string>
    <string name="text_product_name">Product name:</string>
    <string name="product_name_holder">Name</string>
    <string name="text_amount">Amount:</string>
    <string name="amount_holder">Amount</string>
    <string name="button_add">Add</string>
    <string name="button_modify">Modify</string>
    <string name="button_update">Update</string>
    <string name="barcode_num">Barcode number:</string>
    <string name="barcode_num_placeholder">Barcode number</string>
    <string name="product_image">Image:</string>
    <string name="product_image_none">No image selected</string>
    <string name="product_image_add_btn">Choose from gallery</string>
    <string name="product_image_camera_btn">Take a picture</string>

    <!--For itemListActivity-->
    <string name="item_list_title">List of all items</string>

</resources>
