<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemContentActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="243dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/product_desc"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="292dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/barcode_num"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/prod_barcode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:text="@string/barcode_num_placeholder" />

        <TextView
            android:id="@+id/text-name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_product_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/prod_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/text-amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_amount"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/prod_amount2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_modify_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout >